--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "chronicle-inx"
 version = "0.1.0"
 authors = [ "IOTA Stiftung" ]
 edition = "2021"
-description = "IOTA permanode implemented as an IOTA Node Extension (INX)"
+description = "IOTA permanode implemented as an IOTA Node Extension (INX)."
 readme = "README.md"
 repository = "https://github.com/iotaledger/inx-chronicle"
 license = "Apache-2.0"
@@ -19,3 +19,7 @@ name = "inx-chronicle"
 path = "src/main.rs"
 
 [dependencies]
+futures = { version = "0.3.21", default-features = false }
+inx = { git = "https://github.com/iotaledger/inx", version = "0.1.0", default-features = false }
+tokio = { version = "1.17.0", default-features = false, features = ["macros", "rt-multi-thread"] }
+tonic = { verison = "0.6.2", default-features = false }
