--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,39 @@ name = "inx-chronicle"
 path = "src/main.rs"
 
 [dependencies]
+actix = "0.13"
+anyhow = "1.0"
+cfg-if = "1.0"
+derive_more = "0.99"
+dotenv = "0.15"
+env_logger = "0.9"
+futures = "0.3"
+hex = "0.4"
+lazy_static = "1.4"
+log = "0.4"
+mongodb = "2.1"
+pin-project = "1.0"
+primitive-types = { version = "0.10", default-features = false, features = [ "serde" ] }
+prometheus = "0.13"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+thiserror = "1.0"
+tokio = "1.0"
+
+# API
+axum = { version = "0.4", optional = true }
+hyper = { version = "0.14", optional = true }
+tower = { version = "0.4", optional = true }
+tower-http = { version = "0.2", features = ["cors", "catch-panic", "trace"], optional = true }
+
+# Chrysalis pt. 2 types
+bee-message-cpt2 = { git = "https://github.com/iotaledger/bee.git", branch = "mainnet-develop", default-features = false, features = ["serde"], package = "bee-message" }
+bee-rest-api-cpt2 = { git = "https://github.com/iotaledger/bee.git", branch = "mainnet-develop", default-features = false, package="bee-rest-api" }
+
+# Shimmer / Stardust types
+bee-message-shimmer = { git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false, features = ["std", "serde1", "dto"], package = "bee-message" }
+bee-rest-api-shimmer = { git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false, package="bee-rest-api" }
+
+[features]
+default = [ "api" ]
+api = [ "axum", "hyper", "tower", "tower-http" ]
