--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,8 +45,8 @@ tower = { version = "0.4", optional = true }
 tower-http = { version = "0.2", features = ["cors", "catch-panic", "trace"], optional = true }
 
 # Chrysalis pt. 2 types
-bee-message-cpt2 = { git = "https://github.com/iotaledger/bee.git", branch = "mainnet-develop", default-features = false, features = ["serde"], package = "bee-message" }
-bee-rest-api-cpt2 = { git = "https://github.com/iotaledger/bee.git", branch = "mainnet-develop", default-features = false, package="bee-rest-api" }
+bee-message-cpt2 = { package = "bee-message", version = "0.1", default-features = false, features = ["serde"] }
+bee-rest-api-cpt2 = { package = "bee-rest-api", version = "0.1", default-features = false }
 
 # Shimmer / Stardust types
 bee-message-shimmer = { git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false, features = ["std", "serde1", "dto"], package = "bee-message" }
