--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ path = "src/main.rs"
 [dependencies]
 actix = "0.13"
 anyhow = "1.0"
+async-trait = "0.1"
 cfg-if = "1.0"
 derive_more = "0.99"
 dotenv = "0.15"
