--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ actix = "0.13"
 anyhow = "1.0"
 async-trait = "0.1"
 cfg-if = "1.0"
+chrono = "0.4"
 derive_more = "0.99"
 dotenv = "0.15"
 env_logger = "0.9"
@@ -36,6 +37,7 @@ primitive-types = { version = "0.10", default-features = false, features = [ "se
 prometheus = "0.13"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_urlencoded = "0.7"
 thiserror = "1.0"
 tokio = "1.0"
 
