--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,6 +115,11 @@ jobs:
 
       - uses: actions-rs/cargo@v1
         with:
+          command: install
+          args: --force cargo-hack
+
+      - uses: actions-rs/cargo@v1
+        with:
           command: ci-udeps
 
   docs:
