--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,8 @@ name = "inx-chronicle"
 path = "src/main.rs"
 
 [dependencies]
+axum = { version = "0.5.0", default-features = false, features = [ "json", "headers" ] }
 futures = { version = "0.3.21", default-features = false }
 inx = { git = "https://github.com/iotaledger/inx", version = "0.1.0", default-features = false }
-tokio = { version = "1.17.0", default-features = false, features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.17.0", default-features = false, features = [ "macros", "rt-multi-thread" ] }
 tonic = { verison = "0.6.2", default-features = false }
