:tada: Initial commit

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -6,3 +6,4 @@ ci-doc = "doc --all-features --no-deps --document-private-items"
 ci-udeps = "udeps --all-targets --all-features --backend=depinfo"
 ci-clippy = "clippy --all-targets --all-features -- -D warnings"
 ci-fmt = "fmt --all -- --check"
+ci-toml = "sort --grouped --check"
