--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,6 @@ futures = { version = "0.3", default-features = false }
 hex = { version = "0.4", default-features = false }
 log = { version = "0.4", default-features = false }
 mongodb = { version = "2.1", default-features = false, features = ["tokio-runtime"] }
-primitive-types = { version = "0.10", default-features = false, features = [ "serde" ] }
 serde = { version = "1.0", features = ["derive"], default-features = false }
 serde_json = { version = "1.0", default-features = false }
 serde_urlencoded = { version = "0.7", default-features = false }
@@ -39,7 +38,7 @@ time = { version = "0.3", default-features = false }
 tokio = { version = "1.0", default-features = false }
 
 # API
-axum = { version = "0.4", default-features = false, features = ["http1", "json"], optional = true }
+axum = { version = "0.5", default-features = false, features = ["http1", "json", "query"], optional = true }
 hyper = { version = "0.14", default-features = false, features = ["server", "tcp", "stream"], optional = true }
 tower = { version = "0.4", default-features = false, optional = true }
 tower-http = { version = "0.2", default-features = false, features = ["cors", "catch-panic", "trace"], optional = true }
