--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ async-trait = { version = "0.1", default-features = false }
 cfg-if = { version = "1.0", default-features = false }
 derive_more = { version = "0.99", default-features = false }
 dotenv = { version = "0.15", default-features = false }
-env_logger = { version = "0.9", default-features = false }
+env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }
 futures = { version = "0.3", default-features = false }
 hex = { version = "0.4", default-features = false }
 log = { version = "0.4", default-features = false }
