--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ hex = { version = "0.4", default-features = false }
 log = { version = "0.4", default-features = false }
 mongodb = { version = "2.1", default-features = false, features = ["tokio-runtime"] }
 serde = { version = "1.0", features = ["derive"], default-features = false }
-serde_json = { version = "1.0", default-features = false }
+serde_json = { version = "1.0", default-features = false, features = ["std"] }
 serde_urlencoded = { version = "0.7", default-features = false }
 thiserror = { version = "1.0", default-features = false }
 time = { version = "0.3", default-features = false }
