Fix cargo aliases

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,8 +1,13 @@
 [alias]
 ci-build = "build --all-targets --all-features --release"
-ci-test = "test --all-targets --all-features --release"
+ci-clippy = "clippy --all-targets --all-features -- -D warnings"
 ci-doctest = "test --doc --all-features --release"
 ci-doc = "doc --all-features --no-deps --document-private-items"
-ci-udeps = "udeps --all-targets --all-features --backend=depinfo"
-ci-clippy = "clippy --all-targets --all-features -- -D warnings"
 ci-fmt = "fmt --all -- --check"
+ci-test = "test --all-targets --all-features --release"
+ci-toml = "sort --grouped --check"
+ci-udeps = "udeps --all-targets --all-features --backend=depinfo"
+
+fix-clippy = "clippy --all-targets --all-features --fix"
+fix-fmt = "fmt --all"
+fix-toml = "sort --grouped"
