--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,7 @@ axum = { version = "0.5.0", default-features = false, features = [ "json", "head
 dotenv = { version = "0.15", default-features = false }
 env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }
 futures = { version = "0.3.21", default-features = false }
-# TODO Change this back!
-inx = { git = "https://github.com/grtlr/inx", branch = "bump-rust-deps", version = "0.2.0", default-features = false }
+inx = { git = "https://github.com/iotaledger/inx", version = "0.2.0", default-features = false }
 log = { version = "0.4", default-features = false }
 mongodb = { version = "2.1.0", default-features = false, features = ["tokio-runtime"] }
 thiserror = { version = "1.0", default-features = false }
