--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,5 +28,6 @@ futures = { version = "0.3.21", default-features = false }
 inx = { git = "https://github.com/iotaledger/inx", version = "0.2.0", default-features = false }
 log = { version = "0.4", default-features = false }
 mongodb = { version = "2.1.0", default-features = false, features = ["tokio-runtime"] }
+serde = { version = "1.0", features = ["derive"], default-features = false }
 thiserror = { version = "1.0", default-features = false }
 tokio = { version = "1.17.0", default-features = false, features = [ "macros", "rt-multi-thread" ] }
