--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,10 @@ name = "inx-chronicle"
 path = "src/main.rs"
 
 [dependencies]
-actix = { version = "0.13", default-features = false, features = ["macros"] }
+anyhow = { version = "1.0", default-features = false }
 async-trait = { version = "0.1", default-features = false }
 axum = { version = "0.5.0", default-features = false, features = [ "json", "headers" ] }
+backstage = { git = "https://github.com/iotaledger/backstage", branch = "actor-refactor" }
 dotenv = { version = "0.15", default-features = false }
 env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }
 futures = { version = "0.3.21", default-features = false }
@@ -30,4 +31,4 @@ log = { version = "0.4", default-features = false }
 mongodb = { version = "2.1.0", default-features = false, features = ["tokio-runtime"] }
 serde = { version = "1.0", features = ["derive"], default-features = false }
 thiserror = { version = "1.0", default-features = false }
-tokio = { version = "1.17.0", default-features = false, features = [ "macros", "rt-multi-thread" ] }
+tokio = { version = "1.17.0", default-features = false, features = [ "macros", "rt-multi-thread", "signal" ] }
