--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,9 @@ name = "inx-chronicle"
 path = "src/main.rs"
 
 [dependencies]
-actix = { version = "0.13", default-features = false, features = ["macros"] }
 async-trait = { version = "0.1", default-features = false }
 axum = { version = "0.5.0", default-features = false, features = [ "json", "headers" ] }
+derive_more = { version = "0.99", default-features = false, features = [ "from" ] }
 dotenv = { version = "0.15", default-features = false }
 env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }
 futures = { version = "0.3.21", default-features = false }
@@ -30,4 +30,4 @@ log = { version = "0.4", default-features = false }
 mongodb = { version = "2.1.0", default-features = false, features = ["tokio-runtime"] }
 serde = { version = "1.0", features = ["derive"], default-features = false }
 thiserror = { version = "1.0", default-features = false }
-tokio = { version = "1.17.0", default-features = false, features = [ "macros", "rt-multi-thread" ] }
+tokio = { version = "1.17.0", default-features = false, features = [ "macros", "rt-multi-thread", "signal" ] }
