--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,6 @@ log = { version = "0.4", default-features = false }
 mongodb = { version = "2.1", default-features = false, features = ["tokio-runtime"] }
 serde = { version = "1.0", features = ["derive"], default-features = false }
 thiserror = { version = "1.0", default-features = false }
+
+# Coerce `indexmap` to use `std` feature. Hopefully this can be removed at some point.
+indexmap = { version = "1.8", default-features = false, features = ["std"] }
