--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,13 +23,10 @@ clap = { version = "3.1.8", default-features = false, features = [ "derive", "st
 dotenv = { version = "0.15", default-features = false }
 env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }
 futures = { version = "0.3.21", default-features = false }
-inx = { git = "https://github.com/iotaledger/inx", version = "0.2.0", default-features = false }
+inx = { git = "https://github.com/iotaledger/inx", branch = "inx-prost-std", version = "0.2.0", default-features = false }
 log = { version = "0.4", default-features = false }
 mongodb = { version = "2.1", default-features = false, features = ["tokio-runtime"] }
 serde = { version = "1.0", features = ["derive"], default-features = false }
 thiserror = { version = "1.0", default-features = false }
 tokio = { version = "1.17.0", default-features = false, features = [ "macros", "rt-multi-thread", "signal" ] }
 toml = { version = "0.5.8", default-features = false }
-
-# Coerce `indexmap` to use `std` feature. Hopefully this can be removed at some point.
-indexmap = { version = "1.6.2", default-features = false, features = ["std"] }
