Rudimentary INX and plumbing (#28)
* :tada: Initial version

* :construction: Basic version running

* :memo: Small reminder

* :upside_down_face: Coerce `indexmap` to use `std`

* :art: `Error` changes

* :art: Formatting

* :art: Tweak errors some more

* :recycle: Address feedback

* :tada: `Broker` working

* :truck: Move things around

* :memo: Some documentation

* :memo: Typos

* :recycle: Revert `workspace`

* :bug: Fix `toml` sorting

* :construction: Ignore all `.env` files

* :arrow_up: Update dependencies

* :arrow_down: Change deps

* CI again

* And again

* :art: Rename `into_db`

* :sweat_smile: Desperate

* :shrug: Not much we can do

* :arrow_up: Switch dep back

* :test_tube: Fix test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,9 @@ jobs:
   build-and-test:
     runs-on: ${{ matrix.os }}
     continue-on-error: ${{ matrix.experimental }}
-    env:
-      RUSTFLAGS: -D warnings -D missing-docs
+    # Unfortunately, we can do this right now because `indexmap` does not seem to follow semver.
+    # env:
+    #   RUSTFLAGS: -D warnings -D missing-docs
     strategy:
       matrix:
         rust: [stable, beta]
@@ -31,6 +32,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: Install LLVM and Clang (Windows)
+        uses: KyleMayes/install-llvm-action@32c4866ebb71e0949e8833eb49beeebed48532bd
+        if: contains(matrix.os, 'windows')
+        with:
+          version: "11.0"
+          directory: ${{ runner.temp }}/llvm
+
+      - name: Set LIBCLANG_PATH (Windows)
+        run: echo "LIBCLANG_PATH=$((gcm clang).source -replace "clang.exe")" >> $env:GITHUB_ENV
+        if: contains(matrix.os, 'windows')
 
       - name: Install ${{ matrix.rust }}
         uses: actions-rs/toolchain@v1
