--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,11 +19,14 @@ name = "inx-chronicle"
 path = "bin/inx-chronicle/src/main.rs"
 
 [dependencies]
-clap = { version = "3.1.8", default-features = false, features = [ "derive", "std" ] }
+anymap = { version = "0.12", default-features = false }
+async-recursion = { version = "1.0", default-features = false }
+async-trait = { version = "0.1", default-features = false }
+clap = { version = "3.1", default-features = false, features = [ "derive", "std" ] }
 dotenv = { version = "0.15", default-features = false }
 env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }
-futures = { version = "0.3.21", default-features = false }
-inx = { git = "https://github.com/iotaledger/inx", version = "0.2.0", default-features = false }
+futures = { version = "0.3", default-features = false }
+inx = { git = "https://github.com/iotaledger/inx", version = "0.2", default-features = false }
 log = { version = "0.4", default-features = false }
 mongodb = { version = "2.1", default-features = false, features = ["tokio-runtime"] }
 serde = { version = "1.0", features = ["derive"], default-features = false }
