--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ name = "inx-chronicle"
 path = "bin/inx-chronicle/src/main.rs"
 
 [dependencies]
-anymap = { version = "0.12", default-features = false }
+anymap = { version = "1.0.0-beta.2", default-features = false, features = [ "std" ] }
 async-recursion = { version = "1.0", default-features = false }
 async-trait = { version = "0.1", default-features = false }
 clap = { version = "3.1", default-features = false, features = [ "derive", "std" ] }
@@ -31,5 +31,10 @@ log = { version = "0.4", default-features = false }
 mongodb = { version = "2.1", default-features = false, features = ["tokio-runtime"] }
 serde = { version = "1.0", features = ["derive"], default-features = false }
 thiserror = { version = "1.0", default-features = false }
-tokio = { version = "1.17.0", default-features = false, features = [ "macros", "rt-multi-thread", "signal" ] }
-toml = { version = "0.5.8", default-features = false }
+tokio = { version = "1.17", default-features = false, features = [ "macros", "rt-multi-thread", "signal" ] }
+tokio-stream = { version = "0.1", default-features = false }
+toml = { version = "0.5", default-features = false }
+uuid = { version = "0.8", default-features = false }
+
+[patch.crates-io]
+anymap = { git = "https://github.com/Alexandcoats/anymap" }
