Use `protoc` binary

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,16 +33,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install LLVM and Clang (Windows)
-        uses: KyleMayes/install-llvm-action@32c4866ebb71e0949e8833eb49beeebed48532bd
-        if: contains(matrix.os, 'windows')
-        with:
-          version: "11.0"
-          directory: ${{ runner.temp }}/llvm
-
-      - name: Set LIBCLANG_PATH (Windows)
-        run: echo "LIBCLANG_PATH=$((gcm clang).source -replace "clang.exe")" >> $env:GITHUB_ENV
-        if: contains(matrix.os, 'windows')
+      - name: Install protoc
+        uses: arduino/setup-protoc@v1
 
       - name: Install ${{ matrix.rust }}
         uses: actions-rs/toolchain@v1
