--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install protoc
-        uses: arduino/setup-protoc@v1
+      - name: Install protoc (macOS)
+        if: contains(matrix.os, 'macos')
+        run: brew install protobuf
+
+      - name: Install protoc (Ubuntu)
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y protobuf-compiler
 
       - name: Install ${{ matrix.rust }}
         uses: actions-rs/toolchain@v1
