--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,14 +33,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Install protoc (Ubuntu)
+        if: contains(matrix.os, 'ubuntu')
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y protobuf-compiler
+
       - name: Install protoc (macOS)
         if: contains(matrix.os, 'macos')
         run: brew install protobuf
 
-      - name: Install protoc (Ubuntu)
-        run: |
-          sudo apt-get update -y
-          sudo apt-get install -y protobuf-compiler
+      - name: Install protoc (Windows)
+        if: contains(matrix.os, 'windows')
+        run: choco install protoc
 
       - name: Install ${{ matrix.rust }}
         uses: actions-rs/toolchain@v1
