--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,6 @@ name = "inx-chronicle"
 path = "bin/inx-chronicle/src/main.rs"
 
 [dependencies]
-bee-message-stardust = { package = "bee-message", version = "0.2", git = "https://github.com/iotaledger/bee", branch = "shimmer-develop", default-features = false, features = ["std", "serde1", "dto"], optional = true }
-
 async-recursion = { version = "1.0", default-features = false }
 async-trait = { version = "0.1", default-features = false }
 clap = { version = "3.1", default-features = false, features = ["derive", "std"] }
@@ -29,13 +27,16 @@ env_logger = { version = "0.9", default-features = false, features = ["termcolor
 futures = { version = "0.3", default-features = false }
 inx = { git = "https://github.com/iotaledger/inx", version = "0.2", default-features = false, features = ["types"] }
 log = { version = "0.4", default-features = false }
-mongodb = { version = "2.1", default-features = false, features = ["tokio-runtime"] }
+mongodb = { version = "2.1", default-features = false, features = ["bson-chrono-0_4", "tokio-runtime"] }
 serde = { version = "1.0", features = ["derive"], default-features = false }
 thiserror = { version = "1.0", default-features = false }
 tokio = { version = "1.17", default-features = false, features = [ "macros", "rt-multi-thread", "signal" ] }
 tokio-stream = { version = "0.1", default-features = false }
 toml = { version = "0.5", default-features = false }
 uuid = { version = "0.8", default-features = false }
+
+# optional
+bee-message-stardust = { package = "bee-message", version = "0.2", git = "https://github.com/iotaledger/bee", branch = "shimmer-develop", default-features = false, features = ["std", "serde1", "dto"], optional = true }
 
 [features]
 default = ["chrysalis", "stardust"]
