--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,5 @@ tokio = { version = "1.17", default-features = false, features = [ "macros", "rt
 tokio-stream = { version = "0.1", default-features = false }
 toml = { version = "0.5", default-features = false }
 uuid = { version = "1.0", default-features = false, features = ["v4"] }
+packable = { version = "0.2.1", default-features = false, features = [ "io" ] }
+bee-message = { git = "https://github.com/iotaledger/bee", branch = "shimmer-develop", version  = "0.2.0", default-features = false, features = [ "serde", "std" ] }
