--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ clap = { version = "3.1", default-features = false, features = ["derive", "std"]
 dotenv = { version = "0.15", default-features = false }
 env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }
 futures = { version = "0.3", default-features = false }
-inx = { git = "https://github.com/iotaledger/inx", version = "0.2", default-features = false, features = ["types"] }
+inx = { path = "../inx/rust", version = "0.2", default-features = false, features = ["types"] }
 log = { version = "0.4", default-features = false }
 mongodb = { version = "2.1", default-features = false, features = ["bson-chrono-0_4", "tokio-runtime"] }
 serde = { version = "1.0", features = ["derive"], default-features = false }
