--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,10 @@ tower-http = { version = "0.2", default-features = false, features = ["cors", "c
 lazy_static = { version = "1.4", default-features = false, optional = true }
 prometheus = { version = "0.13", default-features = false, optional = true }
 
+# Chrysalis types
+bee-message-chrysalis = { package = "bee-message", version = "0.1", default-features = false, features = ["serde"], optional = true }
+bee-rest-api-chrysalis = { package = "bee-rest-api", version = "0.1", default-features = false, optional = true }
+
 # Stardust types
 bee-message-stardust = { package = "bee-message", version = "0.2", default-features = false, features = ["std", "serde1", "dto"], optional = true }
 bee-rest-api-stardust = { package = "bee-rest-api", version = "0.2", default-features = false, optional = true }
@@ -63,7 +67,7 @@ bee-message-stardust = { package = "bee-message", git = "https://github.com/iota
 bee-rest-api-stardust = { package = "bee-rest-api", git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop" }
 
 [features]
-default = ["api-v2", "api-metrics"]
+default = ["api-v1", "api-v2", "api-metrics"]
 api = [ 
     "axum",
     "derive_more/from",
@@ -77,9 +81,17 @@ api-metrics = [
     "lazy_static",
     "prometheus",
 ]
+api-v1 = [
+    "api",
+    "chrysalis",
+]
 api-v2 = [
     "api",
     "stardust",
+]
+chrysalis = [
+    "bee-message-chrysalis",
+    "bee-rest-api-chrysalis",
 ]
 stardust = [
     "bee-message-stardust",
