--- a/bin/inx-chronicle/docker/Dockerfile
+++ b/bin/inx-chronicle/docker/Dockerfile
@@ -9,6 +9,8 @@ LABEL org.label-schema.schema-version="1.0"
 LABEL org.label-schema.vcs-url="https://github.com/iotaledger/inx-chronicle"
 LABEL org.label-schema.usage="https://github.com/iotaledger/inx-chronicle/blob/main/README.md"
 
+RUN apt-get update && apt-get install -y protobuf-compiler
+
 WORKDIR /inx-chronicle
 COPY . .
 
@@ -20,9 +22,6 @@ RUN cargo build --release
 # https://console.cloud.google.com/gcr/images/distroless/global/cc-debian11
 # using distroless cc "nonroot" image, which includes everything in the base image (glibc, libssl and openssl)
 FROM gcr.io/distroless/cc-debian11:nonroot
-
-# EXPOSE 9091/tcp
-# EXPOSE 9312/tcp
 
 COPY --chown=nonroot:nonroot --from=build /inx-chronicle/target/release/inx-chronicle /app/inx-chronicle
 
