--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,9 +28,10 @@ futures = { version = "0.3", default-features = false }
 inx = { git = "https://github.com/iotaledger/inx", version = "0.2", default-features = false }
 log = { version = "0.4", default-features = false }
 mongodb = { version = "2.2", default-features = false, features = ["tokio-runtime"] }
+sealed = { version = "0.4", default-features = false }
 serde = { version = "1.0", features = ["derive"], default-features = false }
 thiserror = { version = "1.0", default-features = false }
 tokio = { version = "1.17", default-features = false, features = [ "macros", "rt-multi-thread", "signal" ] }
 tokio-stream = { version = "0.1", default-features = false }
 toml = { version = "0.5", default-features = false }
-uuid = { version = "0.8", default-features = false }
+uuid = { version = "1.0", default-features = false, features = ["v4"] }
